Delete / in links, making them relative

--- a/recipes/margarita.html
+++ b/recipes/margarita.html
@@ -31,7 +31,7 @@
                 <li>Rim the glass with salt</li>
             </ul>
         </li>
-        <li>Mix the ingredients in your cocktail shaker with lots of ice</li>
+        <li>Shake the ingredients in your cocktail shaker with lots of ice</li>
         <li>Serve!</li>
     </ol>
 
