--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="/recipes/margarita.html">Margarita</a></li>
-        <li><a href="/recipes/negroni.html">Negroni</a></li>
-        <li><a href="/recipes/old-fashioned.html">Old Fashioned</a></li>
+        <li><a href="recipes/margarita.html">Margarita</a></li>
+        <li><a href="recipes/negroni.html">Negroni</a></li>
+        <li><a href="recipes/old-fashioned.html">Old Fashioned</a></li>
     </ul> 
 </body>
 </html>
