Fixed rel links in recipe pages as images were not loading

--- a/recipes/margarita.html
+++ b/recipes/margarita.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Margarita</h1>
 
-    <img src="/images/margarita.jpg" alt="A margarita glass with salt rimming and a lime wedge.">
+    <img src="images/margarita.jpg" alt="A margarita glass with salt rimming and a lime wedge.">
 
     <h2>Description</h2>
 
