--- a/recipes/old-fashioned.html
+++ b/recipes/old-fashioned.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Old Fashioned</h1>
 
-    <img src="images/old-fashioned.jpg" alt="An old-fashioned with an orange wedge inside and ice, atop wooden boards.">
+    <img src="/images/old-fashioned.jpg" alt="An old-fashioned with an orange wedge inside and ice, atop wooden boards.">
 
     <h2>Description</h2>
 
