Test various img links on old-fashioned.html

--- a/recipes/old-fashioned.html
+++ b/recipes/old-fashioned.html
@@ -8,7 +8,29 @@
 <body>
     <h1>Old Fashioned</h1>
 
-    <img src="./images/old-fashioned.jpg" alt="An old-fashioned with an orange wedge inside and ice, atop wooden boards.">
+    <!-- <img src="./images/old-fashioned.jpg" alt="An old-fashioned with an orange wedge inside and ice, atop wooden boards."> -->
+
+    <p>Image 1</p> 
+    <img src="./images/old-fashioned.jpg">
+    
+    <p>Image 2</p> 
+    <img src="../images/old-fashioned.jpg">
+
+    <p>Image 3</p> 
+    <img src=".../images/old-fashioned.jpg">
+
+    <p>Image 4</p> 
+    <img src="images/old-fashioned.jpg">
+
+    <p>Image 5</p> 
+    <img src="home/narvval/repos/odin-recipes/images/old-fashioned.jpg">
+
+    <p>Image 6</p> 
+    <img src="/narvval/odin-recipes/blob/main/images/old-fashioned.jpg">
+
+
+    
+
 
     <h2>Description</h2>
 
