Finally fix img link issue

--- a/recipes/negroni.html
+++ b/recipes/negroni.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Negroni</h1>
 
-    <img src="/images/negroni.jpg" alt="A negroni glass with an orange wedge.">
+    <img src="../images/negroni.jpg" alt="A negroni glass with an orange wedge.">
 
     <h2>Description</h2>
 
